# Leizhuo_UnderWaterHexapodRobot

./: README.md
1.3D model/sim_model_crab/: Virtual.SLDPRT  ZJ-DUAN.sldprt  body.SLDASM  body1.SLDPRT  leg1-1.SLDPRT  leg1-2.SLDPRT  leg1-3.SLDPRT  leg2.SLDASM  leg3.SLDASM  main.SLDASM  servo_asm.sldasm  servo_gear.SLDASM  top.SLDPRT  无齿盘.SLDPRT  有齿盘.SLDPRT  舵机.SLDPRT
3.Sofrware&Firmware/Leizhuo_UnderWaterHexapodRobot/: CMakeLists.txt  package.xml
3.Sofrware&Firmware/Leizhuo_UnderWaterHexapodRobot/config/: joint_names_Leizhuo_UnderWaterHexapodRobot.yaml
3.Sofrware&Firmware/Leizhuo_UnderWaterHexapodRobot/launch/: display.launch  gazebo.launch  hello.txt
3.Sofrware&Firmware/Leizhuo_UnderWaterHexapodRobot/meshes/: LB_ZHOU_LINK.STL  LF_JIAN_LINK.STL  LF_XI_LINK.STL  LF_ZHOU_LINK.STL  RB_ZHOU_LINK.STL  RF_JIAN_LINK.STL  RF_XI_LINK.STL  RF_ZHOU_LINK.STL  RM_R_LINK.STL  RM_XI_LINK.STL  RM_ZHOU_LINK.STL  base_link.STL
3.Sofrware&Firmware/Leizhuo_UnderWaterHexapodRobot/msg/: joint.msg
3.Sofrware&Firmware/Leizhuo_UnderWaterHexapodRobot/src/: Leizhuo_UnderWaterHexapodRobot.cpp  Leizhuo_UnderWaterHexapodRobotMaoStep.cpp  Leizhuo_UnderWaterHexapodRobot_FluctuateStep.cpp  Leizhuo_UnderWaterHexapodRobot_FluctuateStepHor.cpp  三角步态.txt  猫步.txt
3.Sofrware&Firmware/Leizhuo_UnderWaterHexapodRobot/urdf/: Leizhuo_UnderWaterHexapodRobot.gv  Leizhuo_UnderWaterHexapodRobot.urdf
3.Sofrware&Firmware/Urdf/Leizhuo_UnderWaterHexapodRobot/: CMakeLists.txt
3.Sofrware&Firmware/Urdf/Leizhuo_UnderWaterHexapodRobot/launch/: display.launch
3.Sofrware&Firmware/Urdf/Leizhuo_UnderWaterHexapodRobot/meshes/: LB_JIAN_LINK.STL  LB_R_LINK.STL  LB_XI_LINK.STL  LF_P_LINK.STL  LM_JIAN_LINK.STL  LM_XI_LINK.STL  LM_Y_LINK.STL  LM_ZHOU_LINK.STL  RB_P_LINK.STL  RB_XI_LINK.STL  RM_Y_LINK.STL
3.Sofrware&Firmware/Urdf/Leizhuo_UnderWaterHexapodRobot/urdf/: Leizhuo_UnderWaterHexapodRobot.csv  Leizhuo_UnderWaterHexapodRobot.urdf
